# safix

./: CMakeLists.txt  README  safix.c
cmake_templates/: FindJPEG.cmake  FindTIFF.cmake
