CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
SET(CMAKE_COLOR_MAKEFILE ON)
# set path to additional CMake modules
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_templates ${CMAKE_MODULE_PATH})


IF(WIN32)
    SET(CMAKE_FIND_LIBRARY_SUFFIXES .lib .a ${CMAKE_FIND_LIBRARY_SUFFIXES})
ELSE(WIN32)
    SET(CMAKE_FIND_LIBRARY_SUFFIXES .a ${CMAKE_FIND_LIBRARY_SUFFIXES})
ENDIF(WIN32)

FIND_PACKAGE(TIFF)
FIND_PACKAGE(JPEG)
FIND_PACKAGE(ZLIB)
ADD_EXECUTABLE(safix safix.c)
TARGET_LINK_LIBRARIES( safix 
  ${TIFF_LIBRARIES}
  ${JPEG_LIBRARIES}
  ${ZLIB_LIBRARIES}
)
INCLUDE_DIRECTORIES( 
  ${TIFF_INCLUDE_DIR}
)
SET(CMAKE_EXE_LINKER_FLAGS "-lm")
